// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Param Dialog Tests Render Test 1`] = `
<ParamDialog
  caption="Lorem Ipsum"
>
  <Dialog
    actions={
      {
        "end": [
          <Button
            caption="OK"
            id="ok"
            onClick={[Function]}
          />,
          <Button
            caption="Cancel"
            id="cancel"
            onClick={[Function]}
          />,
        ],
      }
    }
    caption={
      <g>
        <Icon
          disabled={false}
          src={258}
        />
        <Label>
          Parameters
        </Label>
      </g>
    }
    className="msg paramDialog"
    container={
      <body
        theme="dark"
      />
    }
    content={
      <Grid
        columnGap={8}
        columns={
          [
            "128px",
            "auto",
            "auto",
          ]
        }
      >
        <GridCell
          rowSpan={4}
        >
          <Icon
            disabled={false}
            height={128}
            src="parameters.svg"
            width={128}
          />
        </GridCell>
        <GridCell
          columnSpan={2}
          crossAlignment="center"
        >
          <Label
            caption="Lorem Ipsum"
            id="caption"
          />
        </GridCell>
        <GridCell
          className="left"
          crossAlignment="center"
        >
          Parameter name:
        </GridCell>
        <GridCell
          className="right"
          crossAlignment="center"
        >
          <Input
            id="name"
            onChange={[Function]}
            spellCheck={true}
            value=""
          />
        </GridCell>
        <GridCell
          className="left"
          crossAlignment="center"
        >
          Parameter value:
        </GridCell>
        <GridCell
          className="right"
          crossAlignment="center"
        >
          <Input
            id="value"
            onChange={[Function]}
            spellCheck={true}
            value=""
          />
        </GridCell>
      </Grid>
    }
    onClose={[Function]}
  >
    <Portal
      container={
        <body
          theme="dark"
        />
      }
      onClose={[Function]}
      onOpen={[Function]}
    />
  </Dialog>
</ParamDialog>
`;

exports[`Param Dialog Tests Show Panel and Escape 1`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible paramDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-pass-filled"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Parameters
      </label>
      <div
        class="msg button imageOnly"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url("close2.svg");"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: 128px auto auto; column-gap: 8px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-row: span 4;"
        >
          <div
            class="msg icon"
            style="mask-image: url("parameters.svg"); width: 128px; height: 128px;"
          />
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; align-items: center; grid-column: span 2;"
        >
          <label
            class="msg label"
            data-tooltip="expand"
            id="caption"
          >
            Dolor Sit Amet
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell left"
          style="flex-direction: row; align-items: center;"
        >
          Parameter name:
        </div>
        <div
          class="msg container fixedScrollbar gridCell right"
          style="flex-direction: row; align-items: center;"
        >
          <input
            class="msg input"
            id="name"
            spellcheck="true"
            type="text"
          />
        </div>
        <div
          class="msg container fixedScrollbar gridCell left"
          style="flex-direction: row; align-items: center;"
        >
          Parameter value:
        </div>
        <div
          class="msg container fixedScrollbar gridCell right"
          style="flex-direction: row; align-items: center;"
        >
          <input
            class="msg input"
            id="value"
            spellcheck="true"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="OK"
          class="msg button"
          id="ok"
          role="button"
          tabindex="0"
        >
          OK
        </div>
        <div
          caption="Cancel"
          class="msg button"
          id="cancel"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Param Dialog Tests Show Panel and Escape 2`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible paramDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-pass-filled"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Parameters
      </label>
      <div
        class="msg button imageOnly"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url("close2.svg");"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: 128px auto auto; column-gap: 8px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-row: span 4;"
        >
          <div
            class="msg icon"
            style="mask-image: url("parameters.svg"); width: 128px; height: 128px;"
          />
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; align-items: center; grid-column: span 2;"
        >
          <label
            class="msg label"
            data-tooltip="expand"
            id="caption"
          >
            Please enter name/vale pair:
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell left"
          style="flex-direction: row; align-items: center;"
        >
          Parameter name:
        </div>
        <div
          class="msg container fixedScrollbar gridCell right"
          style="flex-direction: row; align-items: center;"
        >
          <input
            class="msg input"
            id="name"
            spellcheck="true"
            type="text"
          />
        </div>
        <div
          class="msg container fixedScrollbar gridCell left"
          style="flex-direction: row; align-items: center;"
        >
          Parameter value:
        </div>
        <div
          class="msg container fixedScrollbar gridCell right"
          style="flex-direction: row; align-items: center;"
        >
          <input
            class="msg input"
            id="value"
            spellcheck="true"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="OK"
          class="msg button"
          id="ok"
          role="button"
          tabindex="0"
        >
          OK
        </div>
        <div
          caption="Cancel"
          class="msg button"
          id="cancel"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
      </div>
    </div>
  </div>
</div>
`;
